# advent-of-code-2023

day-1/src/: main.rs
day-2/: Cargo.toml
day-2/src/: main.rs
day-3/: Cargo.toml
day-3/src/: main.rs
day-4/: Cargo.toml  test-2.txt
day-4/src/: main.rs
